--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 APP_NAME="Laravel Boilerplate"
+APP_EMAIL=""
+APP_ADDRESS=""
+APP_PHONE=""
+MAIN_LOGO=""
+
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -109,3 +114,4 @@ TWITTER_ACTIVE=false
 #TWITTER_CLIENT_ID=
 #TWITTER_CLIENT_SECRET=
 #TWITTER_REDIRECT=${APP_URL}/login/twitter/callback
+
